@@ -1,3 +1,9 @@
+Fri Aug 01 21:12:26 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimConvWindow.cpp:
+	* src/QGaimConvWindow.h:
+	  - Added support for /me.
+
 Fri Aug 01 20:48:05 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimConvWindow.cpp:
